force-app/main/default/objects/ffr__InquiryTemplateSignFilter__c/ffr__InquiryTemplateSignFilter__c.object-meta.xml
<CustomObject>
    <description>Stores the expression that determines whether numbers are displayed with reverse sign in action views.</description>
    <label>Action View Template Sign Filter</label>
    <nameField>
        <displayFormat>ITSF-{00000000}</displayFormat>
        <label>Sign Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Sign Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>