force-app/main/default/objects/ffr__InquiryTemplateSignFilter__c/fields/ffr__DataViewField__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataViewField__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Field</label>
    <referenceTo>ffr__DataViewField__c</referenceTo>
    <relationshipLabel>Action View Template Sign Filters</relationshipLabel>
    <relationshipName>InquiryTemplateSignFilters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>