force-app/main/default/objects/ffr__InquiryTemplateSignFilter__c/fields/ffr__InquiryTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__InquiryTemplate__c</fullName>
    <label>Action View Template</label>
    <referenceTo>ffr__InquiryTemplate__c</referenceTo>
    <relationshipLabel>Action View Template Sign Filters</relationshipLabel>
    <relationshipName>InquiryTemplateSignFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>