force-app/main/default/objects/ffr__InquiryTemplateSignFilter__c/fields/ffr__To__c.field-meta.xml
<CustomField>
    <fullName>ffr__To__c</fullName>
    <label>To</label>
    <length>120</length>
    <type>Text</type>
</CustomField>